Starts the description of input arguments

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -226,6 +226,7 @@
 \renewcommand{\lstlistlistingname}{List of \lstlistingname s}
 \newcommand{\pythonprompt}{>>>}
 \newcommand{\pythonexec}{python3}
+\newcommand{\grassmannexec}{Grassmann}
 \newcommand\numberwithprompt[1]{\footnotesize\ttfamily \pythonprompt}
 \newcommand{\shellprompt}{\$}
 \newcommand\numberwithpromptSH[1]{\footnotesize\ttfamily \shellprompt}
