--- a/doc/requirements.tex
+++ b/doc/requirements.tex
@@ -4,8 +4,23 @@
 \chaptermark{Requirements}
 \chapterauthor{}
 
+\begin{itemize}
 
+\item \href{https://www.python.org/}{Python}, version 3.6 or superior;
 
+\item Python packages:
+  \begin{itemize}
+  \item \href{https://cython.org/}{Cython}, any version (as far we know);
+  \item \href{https://numpy.org/}{Numpy}, any version (as far we know);
+  \item \href{https://www.scipy.org/}{Scipy}, any version (as far we know);
+  \item \href{https://gitpython.readthedocs.io/en/stable/}{GitPython}, any version (as far we know);
+  \end{itemize}
+
+\item A C compiler, any (as far we know);
+
+\item The \href{https://sites.psu.edu/knizia/software/}{IR-WMME} program of Gerald Knizia, for integral evaluation.
+
+\end{itemize}
 
 
 
