--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -303,6 +303,29 @@
 %%  numbers=left,
 %%  numberstyle=\numberwithpromptSH,
 }
+\lstdefinestyle{filestyint}{
+%  language=bash,
+  basicstyle=\small\ttfamily,
+  keywordstyle=\color{blue},
+  commentstyle=\color{red},
+  stringstyle=\color{mymauve},
+  identifierstyle=\color{black},
+  breaklines=true,
+  frame=single,
+  captionpos=tb,
+  keepspaces=true,
+  showspaces=false,
+  showstringspaces=false,
+  showtabs=false,
+  tabsize=2,
+  extendedchars=true,
+  rulecolor=\color{black},
+  title=\lstname,
+  backgroundcolor=\color{white},
+  escapechar=@
+%%  numbers=left,
+%%  numberstyle=\numberwithpromptSH,
+}
 
 
 
