Add the description of input arguments

--- a/doc/output.tex
+++ b/doc/output.tex
@@ -14,6 +14,7 @@ renaming these files, appending an ``\verb+_+\emph{X}'' to their names,
 where \emph{X} is the lowest positive integer such that nothing is overwritten.
 
 \section{File names}
+\label{sec:outname}
 
 The names of the files and directory that Grassmann creates
 are determined in the following way:
@@ -31,6 +32,7 @@ These extensions can be changed with the options \verb+--out_extension+,
 \verb+--log_extension+, and \verb+--dir_extension+.
 
 \section{Controlling log}
+\label{sec:controllog}
 
 Logs are printed depending on the log level,
 that can be defined by the user with the option \verb+--loglevel+.
