--- a/doc/input.tex
+++ b/doc/input.tex
@@ -97,7 +97,7 @@ H2   0.74    0.0    0.0
 \section{Input arguments}
 \label{sec:inputargs}
 
-In the following, all arguments of Grassmann are described.
+In the following, all arguments of Grassmann are listed and briefly described.
 
 \subsection{key/value arguments}
 
@@ -121,65 +121,152 @@ In the following, all arguments of Grassmann are described.
   The file with the geometry description, see Sect.~\ref{sec:geometry}.
 
   % ===================================
-\item \verb++
+\item \verb+molpro_output+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: A file name.
 
-  \emph{Default value}: .
+  \emph{Default value}: None.
+
+  The Molpro file name with the wave function to be used in the calculation.
+
+  % ===================================
+\item \verb+memory+
+
+  \emph{Possible values}: a number, optionally followed by a memory unit
+  (\verb+B+, \verb+kB+, \verb+MB+, \verb+GB+, or \verb+TB+).
+
+  \emph{Default value}: \verb+100.0kB+.
+
+  The maximum memory that will be permitted to be allocated.
+  If only a number is passed, it is assumed to be in kB.
+  
+  % ===================================
+\item \verb+basis+
+
+  \emph{Possible values}: Any basis that is in the directory \verb+bases+ of IR-WMME or any basis that van be obtained from \href{https://www.basissetexchange.org/}{https://www.basissetexchange.org/}.
+
+  \emph{Default value}: cc-pVDZ.
+
+  The basis set to be used in the calculation.
 
 
   % ===================================
-\item \verb++
+\item \verb+ini_orb+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: Molpro's ``put'' xml file or npz file.
 
-  \emph{Default value}: .
+  \emph{Default value}: None.
+  
+  Initial orbital to be used in orbital optimisations.
+  
+  % ===================================
+\item \verb+HF_orb+
 
+  \emph{Possible values}: Molpro's ``put'' xml file.
+
+  \emph{Default value}: None.
+
+  The Hartree-Fock orbitals
 
   % ===================================
-\item \verb++
+\item \verb+WF_orb+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: Molpro's ``put'' xml file.
 
-  \emph{Default value}: .
+  \emph{Default value}: None.
+  
+  The orbitals used to construct the wave function (that is read from \verb+molpro_output+)
+  
+  % ===================================
+\item \verb+WF_templ+
 
+  \emph{Possible values}: Molpro output.
+
+  \emph{Default value}: None.
+  
+  A file with a FCI wave function, that will be used as ``template''.
+  
+  % ===================================
+\item \verb+maxiter+
+
+  \emph{Possible values}: Integer.
+
+  \emph{Default value}: Method dependent.
+
+  Maximum number of iterations
 
   % ===================================
-\item \verb++
+\item \verb+algorithm+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: \verb+orb_rotations+, \verb+general_Absil+, \verb+CISD_Absil+
 
-  \emph{Default value}: .
+  \emph{Default value}: \verb+CISD_Absil+.
 
-  % ===================================
-\item \verb++
-
-  \emph{Possible values}: .
-
-  \emph{Default value}: .
+  The algorithm, to be used in a min dist (at the Grassmannian) calculation.
 
   % ===================================
-\item \verb++
+\item \verb+state+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: An electronic state in Molpro notation.
 
-  \emph{Default value}: .
+  \emph{Default value}: None.
 
-  % ===================================
-\item \verb++
-
-  \emph{Possible values}: .
-
-  \emph{Default value}: .
+  The state to be read from \verb+molpro_output+. If None, uses the first.
 
   % ===================================
-\item \verb++
+\item \verb+loglevel+
 
-  \emph{Possible values}: .
+  \emph{Possible values}: Integer or a log level name.
 
-  \emph{Default value}: .
+  \emph{Default value}: \verb+warning+.
+  
+  The log level, see Sect~\ref{sec:controllog}.
+  
+  % ===================================
+\item \verb+logfilter+
 
+  \emph{Possible values}: A regular expression.
 
+  \emph{Default value}: None.
+  
+  A regular expression filter for function names that will be logged,
+  see Sect~\ref{sec:controllog}.
+  
+  % ===================================
+\item \verb+out_extension+
+
+  \emph{Possible values}: String.
+
+  \emph{Default value}: \verb+.gr+.
+  
+  The extension to be used for the output file. See Sect~\ref{sec:outname}
+  
+  % ===================================
+\item \verb+log_extension+
+
+  \emph{Possible values}: String.
+
+  \emph{Default value}: \verb+.grlog+.
+  
+  The extension to be used for the log file. See Sect~\ref{sec:outname}
+  
+  % ===================================
+\item \verb+dir_extension+
+
+  \emph{Possible values}: String.
+
+  \emph{Default value}: \verb+.grdir+.
+  
+  The extension to be used for the output directory. See Sect~\ref{sec:outname}
+
+  % ===================================
+\item \verb+output+
+
+  \emph{Possible values}: String.
+
+  \emph{Default value}: None.
+
+  The output file name. See Sect~\ref{sec:outname}
 
   
 \end{itemize}
@@ -195,20 +282,25 @@ In the following, all arguments of Grassmann are described.
   Do a spin restricted calculation.
 
   % ===================================
-\item \verb++
+\item \verb+save_final_orb+
 
-  \emph{Default value}: .
+  \emph{Default value}: False.
 
-  % ===================================
-\item \verb++
-
-  \emph{Default value}: .
+  If set, saves the final orbital.
 
   % ===================================
-\item \verb++
+\item \verb+save_full_orb+
 
-  \emph{Default value}: .
+  \emph{Default value}: False.
 
+  If set, saves the virtual orbitals too.
+
+  % ===================================
+\item \verb+save_all_orb+
+
+  \emph{Default value}: False.
+
+  If set, saves the orbitals of all iterations.
 
 \end{itemize}
 
